--- a/css/header.css
+++ b/css/header.css
@@ -1,2 +1,37 @@
 /* Set a style for all elements inside the header i.e. Sign Up button, Sign In button, 
 the title "ScriBBler" & the sub-heading below "ScriBBLer" */
+
+.header{
+    /* margin:10px; */
+}
+
+button{
+    padding: 14px 20px;
+    margin:8px 0;
+    background-color: #CFB53B
+}
+
+input.topBtn{
+    background-color: #0000ff;
+    color:#fff;
+    cursor:pointer;
+    width:90px;
+    padding: 10px;
+    margin: 10px 10px 0 0;
+    float:right;
+    font-size: 90%;
+    font-weight: 500;
+    font-family: Arial, Helvetica, sans-serif;
+}
+input.topBtn:hover{
+    color:#000;
+    background-color:#CFB53B;
+}
+
+.logo-title{
+    color:#112fb4;
+}
+
+.subText{
+
+}
