--- a/css/header.css
+++ b/css/header.css
@@ -15,7 +15,7 @@ the title "ScriBBler" & the sub-heading below "ScriBBLer" */
     margin-top: 0;
     margin: 0 0 0px 10px;
 }
-input.signButton{
+input.signBtn{
     width: 90px;
     padding: 10px;
     cursor: pointer;
@@ -27,7 +27,7 @@ input.signButton{
     margin: 10px 10px;
     font-family: Arial, Helvetica, sans-serif;
 }
-input.signButton:hover {
+input.signBtn:hover {
     color:#000;
     background: green;
 }
@@ -65,7 +65,7 @@ button:hover {
     padding: 14px 20px;
     background-color: #f44336;
 }
-.cancelbtn, .signinbtn, .signUpBtnbtn {
+.cancelbtn, .signinbtn, .signupbtn {
     float: left;
     width: 100%;
 }.container {
@@ -175,18 +175,18 @@ hr {
     font-size: 16px;
     font-weight: 600;
 }
-.signUpBtnForm {
+.signUpForm {
     margin: 10px 10px 30px 20px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
 }                            
-.signUpBtn{
+.signUp{
     color: #0000ff;
     }
-/* Change styles for cancel button and signUpBtn button on extra small screens */
+/* Change styles for cancel button and signup button on extra small screens */
 @media screen and (max-width: 300px) {
-    .cancelbtn, .signinbtn, .signUpBtnbtn {
+    .cancelbtn, .signinbtn, .signupbtn {
         width: 100%;
     }
 }
